--- a/1_Modelo Simple.ipynb
+++ b/1_Modelo Simple.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e6ccca9e-4fec-44af-a8b7-d034101cb913",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\albumentations\\__init__.py:28: UserWarning: A new version of Albumentations is available: '2.0.8' (you have '2.0.7'). Upgrade using: pip install -U albumentations. To disable automatic update checks, set the environment variable NO_ALBUMENTATIONS_UPDATE to 1.\n",
+      "  check_for_updates()\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "99449de6-85e8-41e9-b4ea-7e50866d1207",
    "metadata": {},
    "outputs": [],
@@ -36,17 +45,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f3eea338-d373-4d32-8815-54ba0a156e3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/06/07 20:00:43 INFO mlflow.tracking.fluent: Experiment with name 'MLP_Clasificador_Imagenes' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='file:///c:/Users/sanit/OneDrive/Escritorio/TP%20integrador%20NN/TP-Integrador-RN/mlruns/238164930765243842', creation_time=1749337243079, experiment_id='238164930765243842', last_update_time=1749337243079, lifecycle_stage='active', name='MLP_Clasificador_Imagenes', tags={}>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mlflow.set_experiment(\"MLP_Clasificador_Imagenes\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d21eeefb-bc83-4931-acbc-65ca26d10cbf",
    "metadata": {},
    "outputs": [],
@@ -57,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "573d2f49-abfd-444a-a947-712c1737eb0e",
    "metadata": {},
    "outputs": [],
@@ -76,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4901b00e-6c31-4af2-ab6d-1cc383687d31",
    "metadata": {},
    "outputs": [],
@@ -122,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2d6564e0-f970-461a-8ab4-5d19e0d55040",
    "metadata": {},
    "outputs": [],
@@ -134,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "41919c3b-76d8-4eb0-810a-62ce743752de",
    "metadata": {},
    "outputs": [],
@@ -176,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "1bc0d2e4-319e-4f95-a59b-565182681864",
    "metadata": {},
    "outputs": [],
@@ -192,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "32743888-c68f-4a1a-a5e0-afe766b91486",
    "metadata": {},
    "outputs": [],
@@ -206,19 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a707a13e-87cc-4c2b-89fd-b83ff1fd9d69",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Paths\n",
-    "train_dir = \"data/Split_smol/train\"\n",
-    "val_dir = \"data/Split_smol/val/\""
+    "train_dir = r'skin-dataset-clasification/data/Split_smol/train/'\n",
+    "val_dir = r'skin-dataset-clasification/data/Split_smol/val/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5e18375e-9fb1-4084-8338-302ca99f8744",
    "metadata": {},
    "outputs": [],
@@ -233,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9a9d4d33-e68d-4ccb-8b0e-f18deabc659b",
    "metadata": {},
    "outputs": [],
@@ -256,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "585580ed-3db0-4687-8ab5-a09abacc621b",
    "metadata": {},
    "outputs": [],
@@ -271,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "da9b8088-283f-4549-8c86-2fec28283e02",
    "metadata": {},
    "outputs": [],
@@ -316,10 +343,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a08d5e76-139b-43b0-a5f0-a781b0a22463",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10: 100%|██████████| 22/22 [00:18<00:00,  1.21it/s]\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:\n",
+      "  Train Loss: 2.8603, Accuracy: 23.42%\n",
+      "  Val   Loss: 2.1567, Accuracy: 40.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2/10: 100%|██████████| 22/22 [00:21<00:00,  1.04it/s]\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n",
+      "c:\\Users\\sanit\\OneDrive\\Escritorio\\TP integrador NN\\TP-Integrador-RN\\.venv\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1706: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", result.shape[0])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2:\n",
+      "  Train Loss: 1.7352, Accuracy: 43.53%\n",
+      "  Val   Loss: 1.7658, Accuracy: 38.33%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3/10: 100%|██████████| 22/22 [00:18<00:00,  1.20it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 3:\n",
+      "  Train Loss: 1.4512, Accuracy: 47.13%\n",
+      "  Val   Loss: 1.7005, Accuracy: 42.78%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4/10: 100%|██████████| 22/22 [00:15<00:00,  1.40it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 4:\n",
+      "  Train Loss: 1.2334, Accuracy: 53.16%\n",
+      "  Val   Loss: 1.4269, Accuracy: 56.11%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5/10: 100%|██████████| 22/22 [00:16<00:00,  1.37it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 5:\n",
+      "  Train Loss: 1.1980, Accuracy: 55.03%\n",
+      "  Val   Loss: 1.2864, Accuracy: 56.67%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6/10: 100%|██████████| 22/22 [00:13<00:00,  1.63it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 6:\n",
+      "  Train Loss: 1.0674, Accuracy: 60.92%\n",
+      "  Val   Loss: 1.3489, Accuracy: 54.44%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7/10: 100%|██████████| 22/22 [00:13<00:00,  1.62it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 7:\n",
+      "  Train Loss: 1.0478, Accuracy: 60.34%\n",
+      "  Val   Loss: 1.4092, Accuracy: 58.89%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8/10: 100%|██████████| 22/22 [00:17<00:00,  1.24it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 8:\n",
+      "  Train Loss: 0.9663, Accuracy: 62.79%\n",
+      "  Val   Loss: 1.3896, Accuracy: 50.00%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9/10: 100%|██████████| 22/22 [00:14<00:00,  1.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 9:\n",
+      "  Train Loss: 0.9810, Accuracy: 62.64%\n",
+      "  Val   Loss: 1.3722, Accuracy: 50.56%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10/10: 100%|██████████| 22/22 [00:17<00:00,  1.29it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 10:\n",
+      "  Train Loss: 0.8966, Accuracy: 64.51%\n",
+      "  Val   Loss: 1.2815, Accuracy: 55.56%\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop de entrenamiento\n",
     "n_epochs = 10\n",
@@ -377,10 +577,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "1e7a8964-f0dc-439c-b18b-b084c1afe531",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo guardado como 'mlp_model.pth'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/06/07 20:08:35 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Modelo guardado como 'mlp_model.pth'\n"
+     ]
+    }
+   ],
    "source": [
     "# Guardar modelo\n",
     "torch.save(model.state_dict(), \"mlp_model.pth\")\n",
@@ -392,10 +614,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "551ce1c4-58b3-4abf-8eb7-107b760ba69b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "!tensorboard --logdir=runs/mlp_experimento_1"
    ]
@@ -411,7 +641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -425,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
