--- a/1_Modelo Simple.ipynb
+++ b/1_Modelo Simple.ipynb
@@ -614,20 +614,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "551ce1c4-58b3-4abf-8eb7-107b760ba69b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!tensorboard --logdir=runs/mlp_experimento_1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad787c6a",
+   "metadata": {},
+   "source": [
+    "http://localhost:6006 para ver el tensorboard"
    ]
   },
   {
